lotsa changes, yes

--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -1,128 +1,585 @@
 * Preamble
-  Thanks to all the wonderful yak shavers in the world.
+  Most of this is based on Harry Schwartz's [[https://github.com/hrs/dotfiles/blob/master/emacs/.emacs.d/configuration.org][configuration]].
+  
+  I assume that =use-package= and =general= are always available and sprinkle their incantations
+  generously throughout the configuration.
 
 * Packaging
-  I use =use-package=.
-  
-** Proper
-   #+begin_src emacs-lisp
-   (use-package use-package
-     :config
-     (require 'use-package-ensure)
-     (setq use-package-always-ensure t)
-     (global-set-key [remap dabbrev-expand] 'hippie-expand))
-   #+end_src
-  
-** Auto compiling
-   I /assume/ this is good for all the packages I download and occasionally update.
+  I use =use-package= for packaging my used packages.
 
-   #+begin_src emacs-lisp
-   (use-package auto-compile
-     :config
-     (auto-compile-on-load-mode)
-     (setq load-prefer-newer t))
-   #+end_src
+#+begin_src emacs-lisp
+(use-package use-package
+  :config
+  (require 'use-package-ensure)
+  (setq use-package-always-ensure t)
+  (global-set-key [remap dabbrev-expand] 'hippie-expand))
+#+end_src
 
-* Keybindings
-  I use =general= for all keybindings. It's like =use-package= for my keybindings! Tidy.
+* Keybindings.
+  I use =general= for my keybindings. It's generally quite good. The keybindings themselves will be
+  sprinkled throughout this file.
 
-  #+begin_src emacs-lisp
-  (use-package general
-    :config
-    (general-def
-      "M-i" 'imenu))
-  #+end_src
+#+begin_src emacs-lisp
+(use-package general
+  :config
+  (general-def
+    "M-i" 'imenu))
+#+end_src
 
-* Personal Information
-  Let Emacs know more about me.
-
-  #+begin_src emacs-lisp
-  (setq user-full-name "Hristo Filaretov"
-	user-mail-address "h.filaretov@campus.tu-berlin.de"
-	calendar-latitude 52.52
-	calendar-latitude 13.41
-	calendar-location-name "Berlin, Germany")
-  #+end_src
-
-* Default wrangling
-  
-** Removing all that GUI stuff
-   #+begin_src emacs-lisp
-   (scroll-bar-mode 0)
-   (tool-bar-mode 0)
-   (menu-bar-mode 0)
-   (blink-cursor-mode 0)
-   (fringe-mode 0)
-   #+end_src
-   
-** Text editing
-
-   #+begin_src emacs-lisp
-   (delete-selection-mode 1)
-   (global-auto-revert-mode 1)
-   (show-paren-mode 1)
-   (global-hl-line-mode 1)
-
-   (add-hook 'after-save-hook
-	     'executable-make-buffer-file-executable-if-script-p)
-   #+end_src
-   
-** Scrolling
-   #+begin_src emacs-lisp
-   (setq scroll-margin 2
-	 scroll-step 1
-	 scroll-conservatively 10000
-	 scroll-preserve-screen-position 1)
-   #+end_src
-   
-** Default values
-   Some default values that make sense to me.
-
-   #+begin_src emacs-lisp
-   (setq gc-cons-threshold 200000000
-	 vc-follow-symlinks t
-	 sentence-end-double-space nil
-	 require-final-newline t
-	 confirm-kill-emacs 'y-or-n-p
-	 inhibit-startup-screen t
-	 inhibit-startup-message t
-	 initial-scratch-message nil
-	 ring-bell-function 'ignore
-	 mode-line-default-help-echo nil
-	 show-paren-delay 0.0
-	 mouse-yank-at-point t
-	 default-input-method "TeX")
-
-   (fset 'yes-or-no-p 'y-or-n-p)
-   #+end_src
-
+* Personal information
+  Just letting Emacs know who I am.
+#+begin_src emacs-lisp
+(setq user-full-name "Hristo Filaretov"
+      user-mail-address "h.filaretov@campus.tu-berlin.de")
+#+end_src
 * Theme
-** Dracula
-   #+begin_src emacs-lisp
-   (use-package dracula-theme)
-   #+end_src
+  I am partial to Nord.
 
-** Fixes
-   Some annoyances I've had to fix manually.
-   
-*** Org Heading Levels
-    I don't really like variable font sizes in my plain text documents.
+#+begin_src emacs-lisp
+(use-package nord-theme
+  :config
+  (load-theme 'nord t))
+#+end_src
 
-    #+begin_src emacs-lisp
+* Fonts
+  Depending on the operating system, there are a few options.
+#+begin_src emacs-lisp
+(cond ((eq system-type 'windows-nt)
+       (set-face-attribute 'default nil
+			   :family "Consolas"
+			   :height 110))
+      ((eq system-type 'darwin)
+       (set-face-attribute 'default nil
+			   :family "Source Code Pro"
+			   :height 120
+			   :weight 'semi-bold))
+      (t ;; t for true operating system
+       (set-face-attribute 'default nil
+			   :family "Fira Code"
+			   :height 100
+			   :weight 'normal)))
+#+end_src
+  
+* Face modifications
+  Some things aren't meant to be. Like variable sized fonts in my org files.
+#+begin_src emacs-lisp
+(defun my/org-mode-hook ()
+  "Disable header variable font size."
+  (progn
     (dolist (face '(org-level-1
 		    org-level-2
 		    org-level-3
 		    org-level-4
 		    org-level-5
 		    org-document-title))
-      (set-face-attribute face nil :weight 'semi-bold :height 1.0))
-    #+end_src
+      (set-face-attribute face nil :weight 'semi-bold :height 1.0)))
+  (set-face-attribute 'org-block nil :foreground nil))
 
-*** Org Blocks
-    Org source blocks had an orange foreground because of Dracula. That is very annoying.
-    
-    #+begin_src emacs-lisp
-    (set-face-attribute 'org-block nil :foreground nil)
-    #+end_src
+(add-hook 'org-mode-hook 'my/org-mode-hook)
+
+(defun my/outline-mode-hook ()
+  "Disable header variable font size."
+  (progn
+    (dolist (face '(outline-1
+		    outline-2
+		    outline-3
+		    outline-4
+		    outline-5
+		    outline-6
+		    outline-7
+		    outline-8))
+      (set-face-attribute face nil :weight 'semi-bold :height 1.0))))
+
+(add-hook 'outshine-mode-hook 'my/outline-mode-hook)
+(add-hook 'outline-mode-hook 'my/outline-mode-hook)
+#+end_src
+
+* Modeline
+#+begin_src emacs-lisp
+(use-package minions
+  :config
+  (setq minions-mode-line-lighter ""
+	minions-mode-line-delimiters '("" . ""))
+  (minions-mode 1)
+  (column-number-mode 1))
+#+end_src
+
+* Calendar
+  I want to view a nice pretty calendar sometimes. Mostly based on org entries, sometimes ical.
+  =calfw= seems to do exactly that!
+
+#+begin_src emacs-lisp
+(use-package calfw
+  :config
+  (use-package calfw-org))
+#+end_src
+
+* Evil
+  Vimmy keys and feel, for us former vimfolk.
+#+begin_src emacs-lisp
+(use-package evil
+  :init
+  (setq evil-want-integration t
+	evil-want-keybinding nil
+	evil-want-abbrev-expand-on-insert-exit nil)
+  :config
+  (evil-mode 1)
+  (setq evil-emacs-state-cursos 'bar
+	evil-search-module 'evil-search
+	evil-ex-search-case 'smart)
+  (general-def 'normal
+    "L" 'evil-end-of-line
+    "H" 'evil-first-non-blank-of-visual-line
+    "C-s" 'swiper
+    "C-u" 'evil-scroll-up)
+  (general-def 'insert
+    "C-e" 'end-of-line
+    "C-a" 'beginning-of-line
+    "C-k" 'kill-line
+    "C-y" 'yank)
+  (use-package evil-magit)
+  (use-package evil-numbers)
+  (use-package evil-surround
+    :config
+    (global-evil-surround-mode 1))
+  (use-package evil-exchange
+    :config
+    (evil-exchange-cx-install)))
+#+end_src
+* Wrangle some defaults
+** Pot pourri
+#+begin_src emacs-lisp
+(global-auto-revert-mode 1)
+(show-paren-mode 1)
+(scroll-bar-mode 0)
+(tool-bar-mode 0)
+(menu-bar-mode 0)
+(blink-cursor-mode 0)
+(fringe-mode 0)
+(setq vc-follow-symlinks t
+      sentence-end-double-space nil
+      require-final-newline t
+      confirm-kill-emacs 'y-or-n-p
+      inhibit-startup-screen t
+      inhibit-startup-message t
+      initial-scratch-message nil
+      initial-major-mode 'org-mode
+      ring-bell-function 'ignore
+      mode-line-default-help-echo nil
+      show-paren-delay 0.0
+      mouse-yank-at-point t
+      default-input-method "TeX")
+(fset 'yes-or-no-p 'y-or-n-p)
+(add-hook 'after-save-hook
+	  'executable-make-buffer-file-executable-if-script-p)
+#+end_src
+
+** Backups
+#+begin_src emacs-lisp
+(setq backup-inhibited t
+      auto-save-default nil
+      make-backup-files nil)
+#+end_src
+
+** Scrolling
+#+begin_src emacs-lisp
+(setq scroll-margin 0
+      scroll-step 1
+      scroll-conservatively 10000
+      scroll-preserve-screen-position 1)
+#+end_src
 
 
+#+begin_src emacs-lisp
+;; ** Backups
+;; * Typing text
+(setq-default fill-column 100
+	      cursor-type 'bar)
+
+;; * Code Completion
+(use-package yasnippet)
+
+;; * Major modes
+;; ** Markdown
+(use-package markdown-mode
+  :mode (("README\\.md\\'" . markdown-mode)
+	 ("\\.md\\'" . markdown-mode)
+	 ("\\.markdown\\'" . markdown-mode)))
+
+;; ** Org
+(use-package org
+  :config
+  (setq org-adapt-indentation t
+	org-hide-leading-stars t
+	org-src-fontify-natively t
+	org-src-preserve-indentation t
+	org-src-tab-acts-natively t
+	org-outline-path-complete-in-steps nil
+	org-M-RET-may-split-line nil
+	org-cycle-separator-lines 0
+	org-latex-hyperref-template nil)
+  (setq org-agenda-files '(
+"~/cloud/journal/tasks.org"
+"~/cloud/journal/inbox.org"
+"~/cloud/journal/notes.org"
+"~/cloud/journal/wiki.org"
+))
+  (setq org-archive-location "~/cloud/journal/archive.org::")
+  (setq org-capture-templates
+	'(("n" "Note" entry (file "~/cloud/journal/notes.org")
+	   "*  %?\n")
+	  ("i" "Inbox" entry (file "~/cloud/journal/inbox.org")
+	   "* TODO %?\n")))
+  (add-hook 'org-mode-hook 'auto-fill-mode)
+  (with-eval-after-load 'ox-latex
+    (add-to-list 'org-latex-classes
+		 '("book"
+		   "\\documentclass{book}\n[NO-DEFAULT-PACKAGES]\n[EXTRA]\n"
+		   ("\\chapter{%s}" . "\\chapter*{%s}")
+		   ("\\section{%s}" . "\\section*{%s}")
+		   ("\\subsection{%s}" . "\\subsection*{%s}")
+		   ("\\subsubsection{%s}" . "\\subsubsection*{%s}")))
+    (add-to-list 'org-latex-classes
+		 '("ieee"
+		   "\\documentclass{IEEEtran}\n[NO-DEFAULT-PACKAGES]\n[EXTRA]\n"
+		   ("\\section{%s}" . "")
+		   ("\\subsection{%s}" . "")
+		   ("\\subsubsection{%s}" . "")))
+    (add-to-list 'org-latex-classes
+		 '("blank"
+		   ""
+		   ("\\section{%s}" . "")
+		   ("\\subsection{%s}" . "")
+		   ("\\subsubsection{%s}" . "")))
+    (add-to-list 'org-latex-classes
+		 '("coverletter"
+		   "\\documentclass[a4paper,11pt]{letter}\n[EXTRA]\n")))
+  (general-def
+    "C-c c" 'org-capture
+    "C-c a" 'org-agenda
+    "C-c t" (lambda () (interactive) (org-capture nil "t")))
+  (use-package htmlize)
+  (use-package ox-extra
+    :commands ox-extras-activate
+    :ensure org-plus-contrib
+    :config
+    (ox-extras-activate '(ignore-headlines))))
+
+
+;; ** Ledger
+(use-package ledger-mode)
+
+;; ** TeX
+(use-package tex
+  :ensure nil
+  :config
+  (setq TeX-auto-save t)
+  (setq TeX-parse-self t)
+  (setq TeX-master nil)
+  (setq TeX-PDF-mode t))
+
+(use-package auctex-latexmk
+  :config
+  (auctex-latexmk-setup)
+  (setq auctex-latexmk-inherit-TeX-PDF-mode t))
+
+(defun my/bibtex-hook ()
+  "My bibtex hook."
+  (progn
+    (setq comment-start "%")))
+
+(add-hook 'bibtex-mode-hook 'my/bibtex-hook)
+
+(setq-default TeX-auto-save t
+	      TeX-parse-self t
+	      TeX-PDF-mode t
+	      TeX-auto-local "~/.emacs.d/auctex-auto")
+(setq bibtex-dialect 'biblatex)
+
+;; ** Eshell
+(use-package eshell
+  :config
+  (setq eshell-cmpl-ignore-case t
+	eshell-cmpl-cycle-cutoff-length nil
+	eshell-cmpl-dir-ignore "\\`\\(\\.\\.?\\|\\.svn\\|\\.git\\)/\\'"
+	eshell-banner-message "Don't panic!\n"))
+
+;; * Minor modes
+;; ** Which key
+(use-package which-key
+  :config
+  (which-key-mode))
+
+
+;; ** Olivetti
+(use-package olivetti
+  :config
+  (setq-default olivetti-body-width 120))
+
+;; ** Ivy
+(use-package ivy
+  :config
+  (ivy-mode 1)
+  (setq ivy-use-virtual-buffers t
+	enable-recursive-minibuffers t
+	ivy-initial-inputs-alist nil
+	count-format "(%d/%d) "))
+
+(use-package counsel
+  :config
+  (counsel-mode 1)
+  (use-package flx)
+  (use-package smex))
+
+(use-package ivy-rich
+  :config
+  (ivy-rich-mode 1))
+
+;; ** Outshine
+(use-package outshine
+  :config
+  (setq outshine-startup-folded-p t)
+  (add-hook 'conf-mode-hook #'outshine-mode 1)
+  (add-hook 'prog-mode-hook #'outshine-mode 1)
+  (add-hook 'bibtex-mode-hook #'outshine-mode 1)
+  (add-hook 'LaTeX-mode-hook #'outshine-mode 1))
+
+;; ** Hydra
+(use-package hydra
+  :config
+  (defhydra hydra-shell (:exit t)
+    "Execute shell command."
+    ("m" (start-process "hydramake" nil "make") "make"))
+  (defhydra hydra-window ()
+    "Window management"
+    ("o" other-window "other")
+    ("h" windmove-left "left")
+    ("j" windmove-down "down")
+    ("k" windmove-up "up")
+    ("l" windmove-right "right")
+    ("s" split-window-below "sp-below")
+    ("v" split-window-right "sp-right")
+    ("d" delete-window "delete")
+    ("f" find-file "file")
+    ("b" ivy-switch-buffer "buffer")
+    ("m" kill-this-buffer "murder")
+    ("1" delete-other-windows "highlander")
+    ("." nil "stop"))
+  (defhydra hydra-files (:exit t)
+    "Frequent files"
+    ("e" (find-file (emacs.d "configuration.org")) "config")
+    ("i" (find-file (journal.d "inbox.org")) "inbox")
+    ("n" (find-file (journal.d "notes.org")) "notes")
+    ("u" (find-file (journal.d "uniplan.org")) "uniplan")
+    ("s" (find-file (journal.d "scratch.org")) "scratch")
+    ("r" (find-file (journal.d "reading-list.org")) "to read")
+    ("w" (find-file (journal.d "wiki.org")) "wiki")
+    ("t" (find-file (journal.d "tasks.org")) "tasks")
+    ("s" (find-file (journal.d "scratch.org")) "scratch")
+    ("p" (find-file (journal.d "poetry.org") "packages")))
+  (defhydra hydra-package (:exit t)
+    "Package management"
+    ("r" (package-refresh-contents) "refresh")
+    ("i" (call-interactively #'package-install) "install")
+    ("u" (package-utils-upgrade-all) "upgrade")
+    ("d" (call-interactively #'package-delete) "delete"))
+  (general-def
+    "C-c s" 'hydra-shell/body
+    "C-c f" 'hydra-files/body
+    "C-c p" 'hydra-package/body
+    "C-c w" 'hydra-window/body))
+
+;; ** Magit
+(use-package magit
+  :config
+  (general-def "C-c d" 'magit-list-repositories))
+
+;; *** Repolist
+(defun my/list-subdirs (dir)
+  "List all subdirs, not recursive, absolute names, DIR shouldn't have a / at the end."
+  (let ((base dir)
+	(result))
+    (dolist (f (directory-files base) result)
+      (let ((name (concat base "/" f)))
+	(when (and (file-directory-p name)
+		   (not (equal f ".."))
+		   (not (equal f ".")))
+	  (add-to-list 'result name))))
+    result))
+
+(defun my/contains-git-repo-p (dir)
+  "Check if there's  a .git directory in DIR."
+  (let ((dirs (directory-files dir)))
+    (member ".git" dirs)))
+
+(defun my/filter-git-repos (dirs)
+  "Remove all directories without a .git subdirectory in DIRS."
+  (let ((result))
+    (dolist (dir dirs result)
+      (when (my/contains-git-repo-p dir)
+	(add-to-list 'result dir)))
+    result))
+
+(defun my/make-magit-repolist (dirs)
+  "Make a list of the form (dir 0) for the magit-list-repositories function from DIRS."
+  (let ((result))
+    (dolist (dir dirs result)
+      (add-to-list 'result `(,dir 0)))
+    result))
+
+(defun my/repolist-refresh ()
+  "Hi."
+  (setq magit-repository-directories
+	(~> "~/dev"
+	    (my/list-subdirs)
+	    (my/filter-git-repos)
+	    (my/make-magit-repolist))))
+
+(advice-add 'magit-list-repositories :before #'my/repolist-refresh)
+
+(setq magit-repolist-columns
+      '(("Name" 12 magit-repolist-column-ident nil)
+	("Branch" 10 magit-repolist-column-branch nil)
+	("Dirty" 6 magit-repolist-column-dirty nil)
+	("B<U" 3 magit-repolist-column-unpulled-from-upstream
+	 ((:right-align t)
+	  (:help-echo "Upstream changes not in branch")))
+	("B>U" 3 magit-repolist-column-unpushed-to-upstream
+	 ((:right-align t)
+	  (:help-echo "Local changes not in upstream")))
+	("Version" 30 magit-repolist-column-version nil)
+	("Path" 99 magit-repolist-column-path nil)))
+
+
+;; * Custom
+(setq custom-file "~/.emacs.d/custom.el")
+(load custom-file 'noerror)
+;; * Utils
+;; * Helper functions
+;; ** Directories
+(setq my/journal-path "~/cloud/journal/")
+(defun emacs.d (filename)
+  "Return the file path of FILENAME relative to the Emacs directory."
+  (format "%s%s" user-emacs-directory filename))
+
+(defun journal.d (filename)
+  "Return the file path of FILENAME relative to the Journal directory."
+  (format "%s%s" my/journal-path filename))
+
+;; ** Switch to previous buffer
+(defun my/switch-to-previous-buffer ()
+  "Switch to previously open buffer.
+Repeated invocations toggle between the two most recently open buffers."
+  (interactive)
+  (switch-to-buffer (other-buffer (current-buffer) 1)))
+
+;; ** Join lines
+(defun my/join-lines-region ()
+  "Join lines like J in Vim."
+  (let ((n (my/count-lines-region))
+	(flip-p (eq (region-end) (point))))
+    (progn
+      (when flip-p (exchange-point-and-mark))
+      (dotimes (_ (max 1 (1- n))) (join-line -1)))))
+
+(defun my/count-lines-region ()
+  "Count the lines in the region."
+  (interactive)
+  (let ((numlines (count-lines (region-beginning) (region-end)))
+	(beginning-of-line-p (= (line-beginning-position) (point))))
+    (if beginning-of-line-p
+	(1+ numlines)
+      numlines)))
+
+(defun my/join-line ()
+  "Join lines in the opposite direction."
+  (interactive)
+  (if (region-active-p)
+      (my/join-lines-region)
+    (join-line -1)))
+
+;; ** Delete file
+(defun visiting-file-p ()
+  "Check whether current buffer is visiting an existing file."
+  (let ((filename (buffer-file-name)))
+    (and filename (file-exists-p filename))))
+
+(defun my/delete-this-file ()
+  "Remove file connected to current buffer and kill buffer."
+  (interactive)
+  (let ((filename (buffer-file-name))
+	(buffer (current-buffer))
+	(name (buffer-name)))
+    (if (not (visiting-file-p))
+	(kill-buffer buffer)
+      (when (yes-or-no-p "Delete this file? ")
+	(delete-file filename)
+	(kill-buffer buffer)
+	(message "File %s successfully removed" filename)))))
+
+;; ** Rename file
+(defun my/rename-this-file ()
+  "Rename current buffer and associated file."
+  (interactive)
+  (let ((name (buffer-name))
+	(filename (buffer-file-name)))
+    (if (not (visiting-file-p))
+	(error "Buffer '%s' is not visiting a file!" name)
+      (let ((new-name (read-file-name "New name: " filename)))
+	(if (get-buffer new-name)
+	    (error "A buffer named '%s' already exists!" new-name)
+	  (rename-file filename new-name 1)
+	  (rename-buffer new-name)
+	  (set-visited-file-name new-name)
+	  (set-buffer-modified-p nil)
+	  (message "File '%s' successfully renamed to '%s'"
+		   name (file-name-nondirectory new-name)))))))
+
+;; ** Threading macro
+(defmacro ~> (init &rest lst)
+  "Pipe INIT through LST.
+
+Evaluate transformation pipeline LST. Either append argument at
+the end or replace all :arg occurences (starting with INIT).
+
+Example:
+(pipe (number-sequence 1 10)
+      (-filter 'evenp)
+      (mapcar '1+))
+=> (3 5 7 9 11)
+
+(pipe (number-sequence 1 10)
+    (-filter 'evenp)
+    (mapcar '1+)
+    (-filter (lambda (x) (= 0 (mod x 3))))
+    (mapcar '1+)
+    (-filter (lambda (x) (= 0 (mod x 5)))))
+=> (10)
+
+(pipe 1
+      (1+)
+      (1+)
+      ((lambda (x y) (+ y x)) :arg 100))
+=> 103"
+  (reduce (lambda (acc el)
+	    (if (member :arg el)
+		(-replace :arg acc el)
+	      (append el `(,acc))))
+	  lst
+	  :initial-value init))
+
+;;; init.el ends here
+;; ** Activate current task
+(defun my/activate-current-task ()
+  "Activate task under cursor."
+  (interactive)
+  (progn
+    (message "hi")
+    (let ((task (mapconcat 'identity (org-get-outline-path t) " -> ")))
+      (progn
+	(message task)
+	(write-region task nil "~/.current_task")))))
+
+(general-def "C-c h" 'my/activate-current-task)
+
+#+end_src
