--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -55,7 +55,7 @@
 			   :weight 'semi-bold))
       (t ;; t for true operating system
        (set-face-attribute 'default nil
-			   :family "Iosevka Medium"
+			   :family "Iosevka Term"
 			   :height 100)))
 #+end_src
   
